# agentview

./: .gitignore  AGENT.md  Cargo.toml  LICENSE  README.md
docs/: chess-agent-kanban.md  daemon-vm-observe-act.md
examples/: agent_streaming_tool_loop.rs  chess_engine_agent.rs  hello_world.rs
examples/agentview-chess-player/: SKILL.md
examples/agentview-chess-player/agents/: openai.yaml
examples/chess_engine_agent/: support.rs
src/: agent.rs  control.rs  lib.rs  llm_call.rs  prompt_context.rs  stream_parser.rs  streaming_tool.rs  templates.rs  view_awake.rs  view_session.rs  view_state.rs
src/streaming_tool/: tests.rs
tests/: agent_view_session.rs  agentview_cli.rs  chess_agent_session.rs  control_view_state.rs
